@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2019-05-16 r76518) -- "Unsuffered Consequences"
-Copyright (C) 2019 The R Foundation for Statistical Computing
+R Under development (unstable) (2020-03-30 r78112) -- "Unsuffered Consequences"
+Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -52,9 +52,10 @@ Type 'q()' to quit R.
 > 
 > # Now add some random weights
 > rwt <- runif(nrow(lung), .5, 3)
-> surv1 <- survfit(Surv(time,status) ~ sex, data=lung, stype=2, weight=rwt)
+> surv1 <- survfit(Surv(time,status) ~ sex, data=lung, stype=2, weight=rwt,
++                  robust=FALSE)
 > fit1 <- coxph(Surv(time, status) ~ age + strata(sex), data=lung, iter=0,
-+               ties='breslow', weight=rwt)
++               ties='breslow', weight=rwt, robust=FALSE)
 > fit1$var <- 0*fit1$var   #sneaky
 > surv2 <- survfit(fit1, stype=2, ctype=1)
 > surv3 <- survfit(fit1)
@@ -67,18 +68,18 @@ Type 'q()' to quit R.
 > 
 > # Efron method
 > surv1 <- survfit(Surv(time,status) ~ sex, data=lung, stype=2, ctype=2,
-+                  weight=rwt)
-> surv2 <- survfit(fit1, ctype=2)
++                  weight=rwt, robust=FALSE)
+> surv2 <- survfit(fit1, ctype=2, robust=FALSE)
 > all.equal(unclass(surv1)[arglist], unclass(surv2)[arglist])
 [1] TRUE
 > 
 > # Kaplan-Meier
-> surv1 <- survfit(Surv(time,status) ~ sex, data=lung, weight=rwt)
-> surv2 <- survfit(fit1, stype=1)
+> surv1 <- survfit(Surv(time,status) ~ sex, data=lung, weight=rwt, robust=FALSE)
+> surv2 <- survfit(fit1, stype=1, robust=FALSE)
 > all.equal(unclass(surv1)[arglist], unclass(surv2)[arglist])
 [1] TRUE
 > 
 > 
 > proc.time()
    user  system elapsed 
-  0.753   0.049   0.797 
+  0.866   0.075   0.935 
